--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -18,6 +18,32 @@
   --color-base-highlight-med: rgb(64, 61, 82);
   --color-base-highlight-high: rgb(82, 79, 103);
 
+  /* Rosé Pine Dawn Colors */
+  --color-dawn-base: rgb(250, 244, 237);
+  --color-dawn-surface: rgb(255, 250, 243);
+  --color-dawn-overlay: rgb(242, 233, 222);
+  --color-dawn-muted: rgb(152, 147, 165);
+  --color-dawn-subtle: rgb(121, 117, 147);
+  --color-dawn-text: rgb(87, 82, 121);
+  --color-dawn-love: rgb(180, 99, 122);
+  --color-dawn-gold: rgb(234, 157, 52);
+  --color-dawn-rose: rgb(215, 130, 126);
+  --color-dawn-pine: rgb(40, 105, 131);
+  --color-dawn-foam: rgb(86, 148, 159);
+  --color-dawn-iris: rgb(144, 122, 169);
+  --color-dawn-highlight-low: rgb(244, 237, 232);
+  --color-dawn-highlight-med: rgb(223, 218, 217);
+  --color-dawn-highlight-high: rgb(206, 202, 205);
+
+}
+
+:root {
+  /* Insert the rose pine base color scheme here */
+  --background: var(--color-dawn-base);
+  --foreground: var(--color-dawn-text);
+  --font-sans: var(--font-victor-mono);
+  --font-mono: var(--font-victor-mono);
+
   /* mix up for light */
   --color-base: var(--color-dawn-base);
   --color-surface: var(--color-dawn-surface);
@@ -36,29 +62,6 @@
   --color-highlight-high: var(--color-dawn-highlight-high);
 }
 
-:root {
-  /* Insert the rose pine base color scheme here */
-  --background: var(--color-dawn-base);
-  --foreground: var(--color-dawn-text);
-
-  /* mix up for dark */
-  --color-base: var(--color-base-base);
-  --color-surface: var(--color-base-surface);
-  --color-overlay: var(--color-base-overlay);
-  --color-muted: var(--color-base-muted);
-  --color-subtle: var(--color-base-subtle);
-  --color-text: var(--color-base-text);
-  --color-love: var(--color-base-love);
-  --color-gold: var(--color-base-gold);
-  --color-rose: var(--color-base-rose);
-  --color-pine: var(--color-base-pine);
-  --color-foam: var(--color-base-foam);
-  --color-iris: var(--color-base-iris);
-  --color-highlight-low: var(--color-base-highlight-low);
-  --color-highlight-med: var(--color-base-highlight-med);
-  --color-highlight-high: var(--color-base-highlight-high);
-}
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -71,27 +74,28 @@
     --background: var(--color-base-base);
     --foreground: var(--color-base-text);
 
-    /* Rosé Pine Dawn Colors */
-    --color-dawn-base: rgb(250, 244, 237);
-    --color-dawn-surface: rgb(255, 250, 243);
-    --color-dawn-overlay: rgb(242, 233, 222);
-    --color-dawn-muted: rgb(152, 147, 165);
-    --color-dawn-subtle: rgb(121, 117, 147);
-    --color-dawn-text: rgb(87, 82, 121);
-    --color-dawn-love: rgb(180, 99, 122);
-    --color-dawn-gold: rgb(234, 157, 52);
-    --color-dawn-rose: rgb(215, 130, 126);
-    --color-dawn-pine: rgb(40, 105, 131);
-    --color-dawn-foam: rgb(86, 148, 159);
-    --color-dawn-iris: rgb(144, 122, 169);
-    --color-dawn-highlight-low: rgb(244, 237, 232);
-    --color-dawn-highlight-med: rgb(223, 218, 217);
-    --color-dawn-highlight-high: rgb(206, 202, 205);
+
+    /* mix up for dark */
+    --color-base: var(--color-base-base);
+    --color-surface: var(--color-base-surface);
+    --color-overlay: var(--color-base-overlay);
+    --color-muted: var(--color-base-muted);
+    --color-subtle: var(--color-base-subtle);
+    --color-text: var(--color-base-text);
+    --color-love: var(--color-base-love);
+    --color-gold: var(--color-base-gold);
+    --color-rose: var(--color-base-rose);
+    --color-pine: var(--color-base-pine);
+    --color-foam: var(--color-base-foam);
+    --color-iris: var(--color-base-iris);
+    --color-highlight-low: var(--color-base-highlight-low);
+    --color-highlight-med: var(--color-base-highlight-med);
+    --color-highlight-high: var(--color-base-highlight-high);
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-victor-mono);
 }
